--- a/index.html
+++ b/index.html
@@ -4,136 +4,70 @@
 <head>
  <title>Space Monsters Abode</title>
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <style>
-
-  h1 {
-   color: white;
-   text-align: center;
-  }
-
-  img {
-   border-radius: 20px;
-  }
-
-  body {
-   background-color: #aaaaaa;
-  }
-
-  button {
-   padding: 10px 20px;
-   border: 2px solid #fff;
-   border-radius: 5px;
-   background-color: transparent;
-   color: #fff;
-   font-size: 16px;
-   cursor: pointer;
-   transition: all 0.3s ease;
-   margin-right: 10px;
-  }
-
-  .glavdiv {
-   width: 100%;
-   padding-left: 20px;
-   padding-right: 20px;
-  }
-
-  .rod {
-   background-color: #fff;
-   border-radius: 20px;
-   margin-top: 20px;
-   margin-right: 20px;
-   margin-bottom: 20px;
-   margin-left: 20px;
-   position: relative;
-  }
-
-  .tit {
-   font-size: 40%px;
-   white-space: nowrap;
-   text-align: center;
-  }
-
-  .p2024 {
-   color: white;
-   text-align: center;
-  }
-
-.blok1 {
-  background-color: #888888;
-  border-radius: 100%;
-  margin-top: 50px;
-  margin-right: 0px;
-  margin-bottom: 0px;
-  margin-left: 50px;
-  width: 200px;
-  height: 200px;
-  position: absolute;
-  top: 100px;
-  left: 100px;
-}
-
-@media (max-width: 767px) {
-  .blok1 {
-    display: none;
-  }
-}
-
-
-  .blok2 {
-  }
-
- </style>
+ <link href="styles.css" rel="stylesheet">
+ <link href="styles2.css" rel="stylesheet">
 </head>
    
 <body>
+
+<div class="men">
+ <p>mavantuominen</p>
+</div>
+
+<div class="de"></div>
+
+<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
+
+<div class="de"></div>
+
+<div class="bo">
+ <h2>Лондон</h2>
+ <p>Лондон является столицей Англии. Это самый густонаселенный город в Соединенном Королевстве, с пригородами свыше 13 миллионов жителей.</p>
+ <p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
+
+ <table class="tab">
+ <tbody>
+ <tr>
+ <td>
+  <p>Текст</p>
+ </td>
+ <td>
+  <p>Текст</p>
+ </td>
+ <td>
+  <p>Текст</p>
+ </td>
+ </tr>
+ </tbody>
+ </table>
+</div>
+
+
+
+
+
+
+
  <div class="glavdiv">
 
-  <div class="rod">
-   <div class="blok2">
-    <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" width="100%">
-    <p class="tit">Space Monsters Abode</p>
-   </div>
-   <p class="p2024">____</p>
-   <div class="blok1">
-    <p>AAAA</p>
-   </div>
-  </div>
+ <div class="rod">
+ 
+ <div class="blok2">
+  <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" width="100%">
+  <p class="tit">Space Monsters Abode</p>
+ </div>
+   
+ <p class="p2024">____</p>
+ 
+<div class="blok1"></div>
 
-<table>
-<tbody>
-<tr>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-</tbody>
-</table>
+</div>
 
 <div style="background-color:black;color:white;padding:20px;">
-  <h2>Лондон</h2>
-  <p>Лондон является столицей Англии. Это самый густонаселенный город в Соединенном Королевстве, с пригородами свыше 13 миллионов жителей.</p>
-  <p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
+ <h2>Лондон</h2>
+ <p>Лондон является столицей Англии. Это самый густонаселенный город в Соединенном Королевстве, с пригородами свыше 13 миллионов жителей.</p>
+ <p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
 </div> 
-
-
-
-
-
    
 <table style="width:90%;border-collapse:collapse;">
 
@@ -199,18 +133,18 @@
   
 <tr>
 <td width="100%" style="border: 3px solid white; padding: 8px;">
-<div style="background-color:black;color:white;padding:20px;">
+ <div style="background-color:black;color:white;padding:20px;">
   <h2>Лондон</h2>
   <p>Лондон является столицей Англии. Это самый густонаселенный город в Соединенном Королевстве, с пригородами свыше 13 миллионов жителей.</p>
   <p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
-</div> 
+ </div> 
 </td>
 </tr>
 
 <tr>
-<td width="100%" style="border: 3px solid white; padding: 8px;background-color: #757696;">
-<p>Содержание</p>
-<button onclick="window.location.href = '#';">Кнопка</button>
+ <td width="100%" style="border: 3px solid white; padding: 8px;background-color: #757696;">
+ <p>Содержание</p>
+ <button onclick="window.location.href = '#';">Кнопка</button>
 </td>
 </tr>
 
