--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link href="styles.css" rel="stylesheet">
  <link href="styles2.css" rel="stylesheet">
+ <link href="styles3.css" rel="stylesheet">
 </head>
    
 <body>
@@ -41,6 +42,66 @@
  </tbody>
  </table>
 </div>
+
+<div class="fix-bg" style="background-image: url(1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg)"></div>
+
+<div class="deck-wrap">
+    <div class="deck">
+        <div class="card">
+            <div class="cardHeader">Заголовок</div>
+            <div class="cardBody">
+                <p>Текст</p>
+            </div>
+            <div class="cardFooter">Дата или автор</div>        
+        </div>
+        <!-- Еще карточки -->
+    </div>
+</div>
+
+<section class="grid">
+    <article class="grid-item">
+        <div class="image">
+            <img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" />
+        </div>
+        <div class="info">
+            <h2>Название</h2>
+            <div class="info-text">
+                <p>Текст</p>
+            </div>
+            <div class="button-wrap">
+                <a class="atuin-btn" href="#link">Подробнее</a>
+            </div>
+        </div>
+    </article>
+    
+    <!-- Еще блоки -->
+    
+    <article class="grid-item">
+        <div class="image">
+            <img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" />
+        </div>
+        <div class="info">
+            <h2>Название</h2>
+            <div class="info-text">
+                <p>Текст</p>
+            </div>
+            <div class="button-wrap">
+                <a class="atuin-btn" href="#link">Подробнее</a>
+            </div>
+        </div>
+    </article>    
+</section>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
