--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
 <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
 
+<img src="image3.gif">
+
+<img src="tumblr_mu6g5naKzL1s8hnhko1_500.gif">
+
+
 <div class="de"></div>
 
 <div class="bo">
@@ -33,17 +38,29 @@
   <p>Текст</p>
  </td>
  <td>
-  <p>Текст</p>
+
+<details>
+  <summary>Epcot Center</summary>
+  <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+  <img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" />
+</details>
+
  </td>
  <td>
-  <p>Текст</p>
+
+<details>
+  <summary>Epcot Center<img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" /> </summary>
+  <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+  <img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" />
+</details>
+
  </td>
  </tr>
  </tbody>
  </table>
 </div>
 
-<div class="fix-bg" style="background-image: url(1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg)"></div>
+<div class="fix-bg" style="background-image: url(scale_1200.png)"></div>
 
 <div class="deck-wrap">
     <div class="deck">
@@ -96,12 +113,55 @@
 
 
 
+<div>
+
+  <a class="buon" href="https://siterost.net">Перейти на сайт</a>
+
+</div>
+
+
+
+
+<div class="container">
+  <p>
+    Мы поместили текст в <code>&lt;div&gt;</code>,
+    а сам контейнер покрасили в оранжевый.
+  </p>
+</div>
 
 
 
 
 
+<details>
+  <summary>Epcot Center</summary>
+  <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+  <img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" />
+</details>
 
+
+<details>
+  <summary>Epcot Center</summary>
+  <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+  <img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" />
+</details>
+<details>
+  <summary>Epcot Center</summary>
+  <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+  <img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" />
+</details>
+
+<details>
+  <summary>Epcot Center</summary>
+  <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+  <img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" />
+</details>
+
+
+
+<svg class="c-icon" width="32" height="32" viewBox="0 0 20 20">
+    <use xlink:href="icons.svg#facebook"></use>
+</svg>
 
 
 
