--- a/S.html
+++ b/S.html
@@ -2,15 +2,20 @@
 <html>
 
 <head>
- <title>Space Monsters Abode</title>
- <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Space Monsters Abode</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            color: green;
+        }
+    </style>
 </head>
-   
+
 <body>
 
- <h2>Лондон</h2>
- <p>Лондон является столицей Англии. Это самый густонаселенный город в Соединенном Королевстве, с пригородами свыше 13 миллионов жителей.</p>
- <p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
+    <h2>Лондон</h2>
+    <p>Лондон является столицей Англии. Это самый густонаселенный город в Соединенном Королевстве, с пригородами свыше 13 миллионов жителей.</p>
+    <p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
 
 </body>
 </html>
