--- a/S.html
+++ b/S.html
@@ -17,5 +17,16 @@
     <p>Лондон является столицей Англии. Это самый густонаселенный город в Соединенном Королевстве, с пригородами свыше 13 миллионов жителей.</p>
     <p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
 
+<table class="iksweb">
+	<tbody>
+		<tr>
+			<td><p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
+</td>
+			<td><p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
+</td>
+		</tr>
+	</tbody>
+</table>
+
 </body>
 </html>
