--- a/S.html
+++ b/S.html
@@ -7,7 +7,39 @@
     <style>
         body {
          background-color: green;
+	 margin: 0;
         }
+
+table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        td {
+            box-sizing: border-box;
+            border: 1px solid black;
+            width: 50%;
+        }
+
+.your-div-class-or-element-id {
+    width: 100%;
+    background-color: #122c34;
+    height: 400px;
+    float: left;
+    color: #fff;
+}
+
+.your-div-class-or-element-id2 {
+    width: 100%;
+    background-color: #fff;
+    height: 400px;
+    float: left;
+}
+
+.hh11 {
+	text-align: center;
+}
+
     </style>
 </head>
 
@@ -22,13 +54,26 @@
 		<tr>
 			<td><p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
 </td>
-			<td><p>Стоя на берегу реки Темзы, Лондон был крупным поселением на протяжении двух тысячелетий, за его историю, уходящую своего основания римлянами, которые назвали его Londinium.</p>
-</td>
+			<td><img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" /></td>
 		</tr>
 	</tbody>
 </table>
 
-<img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" />
+<img src="1684671675_polinka-top-p-kartinki-teilza-krasivo-38.jpg" class="responsive-image" />
+
+<div class="your-div-class-or-element-id2">
+<p>Текст</p>
+</div>
+<div class="your-div-class-or-element-id">
+<h1 class="hh11">mavantuominen</h1>
+<p>Текст</p>
+</div>
+
+<select multiple>
+  <option value='apple'>Яблоко</option>
+  <option value='banana'>Банан</option>
+  <option value='orange'>Апельсин</option>
+</select>
 
 </body>
 </html>
