--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 <title>mavantuominen</title>
-<link href="https://github.com/mavantuominen/mavantuominen/blob/main/styles.css" rel="stylesheet">
+<link href="styles.css" rel="stylesheet">
 
 </head>
 
