--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>mavantuominen</title>
 <link href="styles.css" rel="stylesheet">
 
