--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p></p>
 
 <div class="geldiv3 ner">
-<p><img src="8994783f-d6b3-4b2c-9396-7b1dda16acda.png"></p>
+<p><img src="404.svg"></p>
 </div>
 
 </body>
