--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 <body>
 
-<p></p>
+<div class="bodybody">
 
-<div class="geldiv3 ner">
-<p><img src="404.svg"></p>
+<div class="divdiv">
+<h1>Сайт</h1>
+</div>
+
 </div>
 
 </body>
