--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
 
 <div class="bodybody">
 
+<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
+
+<div class="raz"></div>
+
 <div class="divdiv">
-<h1>Сайт</h1>
+<details class="divdetails">
+  <summary class="divsummary">Содержание</summary>
+<div class="divdiv">
+  <p>Текст</p>
+</div>
+</details>
 </div>
 
 </div>
