--- a/index.html
+++ b/index.html
@@ -15,16 +15,80 @@
 
 <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
 
-<div class="raz"></div>
+<div class="divdiv">
+<details>
+ <summary>Содержание</summary>
+  <p class="txt">Текст</p>
+</details>
+
+<details>
+ <summary>Содержание</summary>
+  <p class="txt">Текст</p>
+</details>
+
+</div>
 
 <div class="divdiv">
-<details class="divdetails">
-  <summary class="divsummary">Содержание</summary>
-<div class="divdiv">
-  <p>Текст</p>
+<table class="table-style">
+
+<!-- МЕНЮ -->
+
+<tr>
+<td class="tdbody">  
+
+<table class="table-style">
+
+<tr>
+<td class="tdmenu">
+<p><a href="#">О нас</a></p>
+</td>
+<td class="tdmenu">
+<p><a href="#">YouTube</a></p>
+</td>
+<td class="tdmenu">
+<p><a href="#">Pinterest</a></p>
+</td>
+</tr>
+
+<tr>
+<td class="tdmenu">
+<p><a href="#">Teletype</a></p>
+</td>
+<td class="tdmenu">
+<p><a href="#">TikTok</a></p>
+</td>
+<td class="tdmenu">
+<p><a href="#">Blogger</a></p>
+</td>
+</tr>
+
+<tr>
+<td class="tdmenu">
+<p><a href="#">Public VK</a></p>
+</td>
+<td class="tdmenu">
+<p><a href="#">Беседа VK</a></p>
+</td>
+<td class="tdmenu">
+<p><a href="#">Бот</a></p>
+</td>
+</tr>
+
+</table>
+
+</td>
+</tr>
+
+</table>
 </div>
+
+<h2 class="hhh">Заголовок</h2>
+<p class="text">Текст</p>
+<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
+<details>
+ <summary>Содержание</summary>
+  <p class="txt">Текст</p>
 </details>
-</div>
 
 </div>
 
