--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
 
+<div class="divdiv2">
+<p class="txt">Сайт ещё не готов</p>
+</div>
+
 <div class="divdiv">
 <details>
  <summary>Содержание</summary>
