--- a/index.html
+++ b/index.html
@@ -44,37 +44,37 @@
 
 <tr>
 <td class="tdmenu">
-<p><a href="#">О нас</a></p>
+<p><a href="#">ПУСТО</a></p>
 </td>
 <td class="tdmenu">
-<p><a href="#">YouTube</a></p>
+<p><a href="#">ПУСТО</a></p>
 </td>
 <td class="tdmenu">
-<p><a href="#">Pinterest</a></p>
-</td>
-</tr>
-
-<tr>
-<td class="tdmenu">
-<p><a href="#">Teletype</a></p>
-</td>
-<td class="tdmenu">
-<p><a href="#">TikTok</a></p>
-</td>
-<td class="tdmenu">
-<p><a href="#">Blogger</a></p>
+<p><a href="#">ПУСТО</a></p>
 </td>
 </tr>
 
 <tr>
 <td class="tdmenu">
-<p><a href="#">Public VK</a></p>
+<p><a href="#">ПУСТО</a></p>
 </td>
 <td class="tdmenu">
-<p><a href="#">Беседа VK</a></p>
+<p><a href="#">ПУСТО</a></p>
 </td>
 <td class="tdmenu">
-<p><a href="#">Бот</a></p>
+<p><a href="#">ПУСТО</a></p>
+</td>
+</tr>
+
+<tr>
+<td class="tdmenu">
+<p><a href="#">ПУСТО</a></p>
+</td>
+<td class="tdmenu">
+<p><a href="#">ПУСТО</a></p>
+</td>
+<td class="tdmenu">
+<p><a href="#">ПУСТО</a></p>
 </td>
 </tr>
 
