--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <div class="bodybody">
 
+<div class="divdiv3">
+<p>Текст</p>
+</div>
+
 <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
 
 <div class="divdiv2">
