--- a/index.html
+++ b/index.html
@@ -11,37 +11,43 @@
 
 <body>
 
-<div class="bodybody">
+<div>
 
 <div class="divdiv3">
+<p>Текст</p>
+<p>Текст</p>
 <p>Текст</p>
 </div>
 
 <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
 
 <div class="divdiv2">
-<p class="txt">Сайт ещё не готов</p>
+<p>Сайт ещё не готов</p>
 </div>
 
 <div class="divdiv">
 <details>
  <summary>Содержание</summary>
-  <p class="txt">Текст</p>
+  <p>Текст</p>
 </details>
 
 <details>
  <summary>Содержание</summary>
-  <p class="txt">Текст</p>
+  <p>Текст</p>
 </details>
 
 </div>
 
-<h2 class="hhh">Заголовок</h2>
-<p class="text">Текст</p>
+
+<h2>Заголовок</h2>
+<p>Текст</p>
+<p>Текст</p>
+<p>Текст</p>
+<p>Текст</p>
 <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
 <details>
  <summary>Содержание</summary>
-  <p class="txt">Текст</p>
+  <p>Текст</p>
 </details>
 
 </div>
