--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
 
 </div>
 
+<div class="container">
+  <div class="block"></div>
+  <div class="block"></div>
+  <div class="block"></div>
+</div>
+
+<p class="colorful-block">Ntrcn</p>
+
 </body>
 </html>
