--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
   <p>Текст</p>
 </details>
 
+<h2>Заголовок</h2>
+<p>Текст</p>
+<p>Текст</p>
+<p>Текст</p>
+<p>Текст</p>
+<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
+<details>
+ <summary>Содержание</summary>
+  <p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+</details>
+
+<p class="colorful-block">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+
 </div>
 
 
@@ -47,18 +60,12 @@
 <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
 <details>
  <summary>Содержание</summary>
-  <p>Текст</p>
+  <p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 </details>
 
 </div>
 
-<div class="container">
-  <div class="block"></div>
-  <div class="block"></div>
-  <div class="block"></div>
-</div>
-
-<p class="colorful-block">Ntrcn</p>
+<p class="colorful-block">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 </body>
 </html>
