--- a/index.html
+++ b/index.html
@@ -13,44 +13,16 @@
 
 <div>
 
-<div class="divdiv3">
-<p>Текст</p>
-<p>Текст</p>
-<p>Текст</p>
-</div>
-
-<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
-
-<div class="divdiv2">
-<p>Сайт ещё не готов</p>
-</div>
-
 <div class="divdiv">
 <details>
  <summary>Содержание</summary>
-  <p>Текст</p>
+  <div class="div_details"><p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p></div>
 </details>
 
 <details>
  <summary>Содержание</summary>
-  <p>Текст</p>
+  <div class="div_details"><p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p></div>
 </details>
-
-<h2>Заголовок</h2>
-<p>Текст</p>
-<p>Текст</p>
-<p>Текст</p>
-<p>Текст</p>
-<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
-<details>
- <summary>Содержание</summary>
-  <p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
-</details>
-
-<p class="colorful-block">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
-
-</div>
-
 
 <h2>Заголовок</h2>
 <p>Текст</p>
@@ -63,11 +35,11 @@
   <div class="div_details"><p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p></div>
 </details>
 
-</div>
-
 <p class="colorful-block">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 <img src="hHZudkEQ-Zw.jpg" class="photo">
+
+</div>
 
 </body>
 </html>
