--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 
-<div class="divdiv">
-<a href="#" class="square-button">&#9776;</a>
+<div class="divmenu">
+<a class="a-button-white">menu</a>
 </div>
 
 <div class="divdiv">
@@ -37,7 +37,7 @@
   <div class="div_details"><p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p></div>
 </details>
 
-<p class="colorful-block">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+<p class="quote-green">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 <img src="hHZudkEQ-Zw.jpg" class="photo">
 
