--- a/index.html
+++ b/index.html
@@ -11,33 +11,23 @@
 
 <body>
 
-<a class="a-button-white">menu</a>
+<p class="p-p"><a class="a-button-white">menu</a></p>
 
 <div class="divdiv">
-<details>
- <summary>Содержание</summary>
-  <div class="div_details"><p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p></div>
-</details>
+<div class="transparent"><h2>Заголовок</h2></div>
+<div class="transparent"><p>Текст</p></div>
+<div class="transparent"><p>Текст</p></div>
+<div class="transparent"><p>Текст</p></div>
+<div class="transparent"><p>Текст</p></div>
+<div class="transparent"><img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo"></div>
 
-<details>
- <summary>Содержание</summary>
-  <div class="div_details"><p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p></div>
-</details>
-
-<h2>Заголовок</h2>
-<p>Текст</p>
-<p>Текст</p>
-<p>Текст</p>
-<p>Текст</p>
-<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
-<details>
- <summary>Содержание</summary>
-  <div class="color-div-blue"><p>Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p></div>
-</details>
-
+<div class="transparent">
 <p class="quote-green">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+</div>
 
+<div class="transparent">
 <img src="hHZudkEQ-Zw.jpg" class="photo">
+</div>
 
 </div>
 
