--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+<div class="div-body">
 
 <p class="p-p"><a class="a-button-white">menu</a></p>
 
@@ -31,5 +32,6 @@
 
 </div>
 
+</div>
 </body>
 </html>
