--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
 <body>
 <div class="div-body">
 
+<div class="divdiv">
+
 <p class="p-p"><a class="a-button-white">menu</a></p>
 
-<div class="divdiv">
-<div class="transparent"><h2>Заголовок</h2></div>
-<div class="transparent"><p>Текст</p></div>
-<div class="transparent"><p>Текст</p></div>
-<div class="transparent"><p>Текст</p></div>
-<div class="transparent"><p>Текст</p></div>
-<div class="transparent"><img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo"></div>
+<h2 class="h2-h2">Заголовок</h2>
+<p class="p-p">Текст</p>
+<p class="p-p">Текст</p>
+<p class="p-p">Текст</p>
+<p class="p-p">Текст</p>
+<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
 
-<div class="transparent">
 <p class="quote-green">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
-</div>
 
-<div class="transparent">
 <img src="hHZudkEQ-Zw.jpg" class="photo">
-</div>
 
 </div>
 
