--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
 
 <p class="quote-green">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
+<p class="quote-green">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+
 <img src="hHZudkEQ-Zw.jpg" class="photo">
+
+<ul>
+  <li>Первый пункт списка
+    <ul>
+<ul>
+      <li>Подпункт 1</li>
+      <li>Подпункт 2</li>
+      <li>Подпункт 3</li>
+    </ul>
+      <li>Подпункт 2</li>
+      <li>Подпункт 3</li>
+    </ul>
+  </li>
+  <li>Второй пункт списка</li>
+  <li>Третий пункт списка</li>
+</ul>
 
 </div>
 
