--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
 <div class="divdiv">
 
-<p class="p-p"><a class="a-button-white">menu</a></p>
-
 <h2 class="h2-h2">Заголовок</h2>
 <p class="p-p">Текст</p>
 <p class="p-p">Текст</p>
@@ -25,6 +23,7 @@
 
 <p class="quote-green">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
+<div class="color-div-blue">
 <p class="quote-green">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 <img src="hHZudkEQ-Zw.jpg" class="photo">
@@ -44,6 +43,10 @@
   <li>Второй пункт списка</li>
   <li>Третий пункт списка</li>
 </ul>
+
+<p class="p-p"><a class="a-button-white">menu</a></p>
+
+</div>
 
 </div>
 
