--- a/index.html
+++ b/index.html
@@ -10,32 +10,29 @@
 </head>
 
 <body>
-<div class="div-body">
+<div class="block-article">
 
-<div class="divdiv">
+<h2 class="h2-h2 rules">Заголовок</h2>
 
-<h2 class="h2-h2">Заголовок</h2>
-<p class="p-p">Текст</p>
-<p class="p-p">Текст</p>
-<p class="p-p">Текст</p>
-<p class="p-p">Текст</p>
-<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo">
+<p class="paragraph rules">Текст</p>
 
-<p class="quote-green">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+<p class="paragraph rules">Текст</p>
 
-<div class="color-div-blue">
-<p class="quote-green">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo rules">
 
-<img src="hHZudkEQ-Zw.jpg" class="photo">
+<p class="quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
+<div class="color-div rules">
+
+<p class="quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+
+<img src="hHZudkEQ-Zw.jpg" class="photo rules">
+
+<div class="rules">
 <ul>
   <li>Первый пункт списка
     <ul>
-<ul>
       <li>Подпункт 1</li>
-      <li>Подпункт 2</li>
-      <li>Подпункт 3</li>
-    </ul>
       <li>Подпункт 2</li>
       <li>Подпункт 3</li>
     </ul>
@@ -43,10 +40,9 @@
   <li>Второй пункт списка</li>
   <li>Третий пункт списка</li>
 </ul>
-
-<p class="p-p"><a class="a-button-white">menu</a></p>
-
 </div>
+
+<a><p class="a-button-white rules">menu</p></a>
 
 </div>
 
