--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
 <body>
 <div class="block-article">
 
-<h2 class="h2-h2 rules">Заголовок</h2>
+<h2 class="heading2 rules">Заголовок</h2>
 
 <p class="paragraph rules">Текст</p>
 
 <p class="paragraph rules">Текст</p>
 
-<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="photo rules">
+<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="rules">
 
-<p class="quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+<blockquote class="quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
 
 <p class="paragraph rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 <div class="color-div rules">
 
-<p class="quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+<p class="paragraph rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
-<img src="hHZudkEQ-Zw.jpg" class="photo rules">
+<blockquote class="quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
+
+<img src="hHZudkEQ-Zw.jpg" class="rules">
 
 <div class="rules">
 <ul>
@@ -44,6 +46,8 @@
 </ul>
 </div>
 
+<a><p class="a-button-white rules">menu</p></a>
+<a><p class="a-button-white rules">menu</p></a>
 <a><p class="a-button-white rules">menu</p></a>
 
 </div>
