--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="rules">
 
-<blockquote class="quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
+<blockquote class="paragraph quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
 
 <p class="paragraph rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
@@ -28,14 +28,14 @@
 
 <p class="paragraph rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
-<blockquote class="quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
+<blockquote class="paragraph quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
 
 <img src="hHZudkEQ-Zw.jpg" class="rules">
 
-<div class="rules">
-<ul>
+<div class="paragraph rules">
+<ul class="list">
   <li>Первый пункт списка
-    <ul>
+    <ul class="list">
       <li>Подпункт 1</li>
       <li>Подпункт 2</li>
       <li>Подпункт 3</li>
@@ -46,12 +46,18 @@
 </ul>
 </div>
 
-<a><p class="a-button-white rules">menu</p></a>
-<a><p class="a-button-white rules">menu</p></a>
-<a><p class="a-button-white rules">menu</p></a>
-
+<div class="div-buttons rules">
+<a class="a-button-white">menu</a>
+<a class="a-button-white">menu</a>
+<a class="a-button-white">menu</a>
 </div>
 
 </div>
+
+</div>
+
+<div class="block-404">
+</div>
+
 </body>
 </html>
