--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
 <div class="block-article">
 
-<h2 class="heading2 rules">Заголовок</h2>
+<h2 class="heading2 rules" id="h1">Заголовок</h2>
 
-<p class="paragraph rules">Текст</p>
+<p class="paragraph rules" id="p1">Текст</p>
 
-<p class="paragraph rules">Текст</p>
+<p class="paragraph rules" id="p2">Текст</p>
 
-<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="rules">
+<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="rules" id="img1">
 
-<blockquote class="paragraph quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
+<blockquote class="paragraph quote rules" id="b1">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
 
-<p class="paragraph rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+<p class="paragraph rules" id="p3">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 <div class="color-div rules">
 
-<p class="paragraph rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+<p class="paragraph rules" id="p4">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
-<blockquote class="paragraph quote rules">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
+<blockquote class="paragraph quote rules" id="b2">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
 
-<img src="hHZudkEQ-Zw.jpg" class="rules">
+<img src="hHZudkEQ-Zw.jpg" class="rules" id="img2">
 
 <div class="paragraph rules">
 <ul class="list">
@@ -57,6 +57,7 @@
 </div>
 
 <div class="block-404">
+<p>Сайт не поддерживается на экранах с шириной меньше 300 пикселей</p>
 </div>
 
 </body>
