--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 <body>
 <div class="block-article">
 
+<div class="color-div rules color-div-f5deb3">
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+</div>
+
+<div class="color-div rules color-div-f1f1f1">
+<h2 class="heading2 rules">Информация</h2>
+<h2 class="heading2 rules">Скиллы</h2>
+<h2 class="heading2 rules">Социальные сети</h2>
+<h2 class="heading2 rules">Мои фотогрфии</h2>
+<h2 class="heading2 rules">Фото / Друзья / Блоги</h2>
+<h2 class="heading2 rules">Видео / Клипы / Гифы</h2>
+<img src="nsV3JU6pyc0.jpg" class="rules">
+</div>
+
+
 <h2 class="heading2 rules" id="h1">Заголовок</h2>
 
 <p class="paragraph rules" id="p1">Текст</p>
@@ -24,7 +39,7 @@
 
 <p class="paragraph rules" id="p3">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
-<div class="color-div rules">
+<div class="color-div rules color-div-f0e68c">
 
 <p class="paragraph rules" id="p4">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
@@ -56,9 +71,7 @@
 
 </div>
 
-<div class="block-404">
-<p>Сайт не поддерживается на экранах с шириной меньше 300 пикселей</p>
-</div>
+<p class="display-p">Сайт не поддерживается на экранах с шириной меньше 300 пикселей</p>
 
 </body>
 </html>
