--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
 <p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 </div>
 
+<p class="separator"></p>
+
 <div class="color-div rules color-div-f1f1f1">
-<h2 class="heading2 rules">Информация</h2>
-<h2 class="heading2 rules">Скиллы</h2>
-<h2 class="heading2 rules">Социальные сети</h2>
-<h2 class="heading2 rules">Мои фотогрфии</h2>
-<h2 class="heading2 rules">Фото / Друзья / Блоги</h2>
+<h2 class="heading2 rules"><span class="pspan">&#10148;</span> Информация</h2>
+<h2 class="heading2 rules"><span class="pspan">&#10148;</span> Скиллы</h2>
+<h2 class="heading2 rules"><span class="pspan">&#10148;</span> Социальные сети</h2>
+<h2 class="heading2 rules"><span class="pspan">&#10148;</span> Мои фотогрфии</h2>
+<p class="separator"></p>
+<h2 class="heading2 rules rules">Фото / Друзья / Блоги</h2>
 <h2 class="heading2 rules">Видео / Клипы / Гифы</h2>
+<p class="separator"></p>
 <img src="nsV3JU6pyc0.jpg" class="rules">
 </div>
 
