--- a/index.html
+++ b/index.html
@@ -12,46 +12,42 @@
 <body>
 <div class="block-article">
 
-<div class="color-div rules color-div-f5deb3">
+<h1 class="heading">mavantuominen</h1>
+
+<div class="color-div color-div-f5deb3 miniblock">
 <p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 </div>
 
 <p class="separator"></p>
 
-<div class="color-div rules color-div-f1f1f1">
-<h2 class="heading2 rules"><span class="pspan">&#10148;</span> Информация</h2>
-<h2 class="heading2 rules"><span class="pspan">&#10148;</span> Скиллы</h2>
-<h2 class="heading2 rules"><span class="pspan">&#10148;</span> Социальные сети</h2>
-<h2 class="heading2 rules"><span class="pspan">&#10148;</span> Мои фотогрфии</h2>
+<div class="color-div color-div-f1f1f1 miniblock">
+
+<h2 class="subtitle"><span class="pspan">&#10148;</span> Информация</h2>
+<h2 class="subtitle"><span class="pspan">&#10148;</span> Скиллы</h2>
+<h2 class="subtitle"><span class="pspan">&#10148;</span> Социальные сети</h2>
+<h2 class="subtitle"><span class="pspan">&#10148;</span> Мои фотогрфии</h2>
+
 <p class="separator"></p>
-<h2 class="heading2 rules rules">Фото / Друзья / Блоги</h2>
-<h2 class="heading2 rules">Видео / Клипы / Гифы</h2>
+
+<h2 class="subtitle">Фото / Друзья / Блоги</h2>
+<h2 class="subtitle">Видео / Клипы / Гифы</h2>
+
 <p class="separator"></p>
-<img src="nsV3JU6pyc0.jpg" class="rules">
+
+<img src="nsV3JU6pyc0.jpg" class="photo">
 </div>
 
+<p class="separator"></p>
 
-<h2 class="heading2 rules" id="h1">Заголовок</h2>
+<blockquote class="quote">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
 
-<p class="paragraph rules" id="p1">Текст</p>
+<p class="separator"></p>
 
-<p class="paragraph rules" id="p2">Текст</p>
+<p class="paragraph">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
-<img src="https://hartwigenders.github.io/spacemonstersabode/obl.jpg" class="rules" id="img1">
+<p class="separator"></p>
 
-<blockquote class="paragraph quote rules" id="b1">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
-
-<p class="paragraph rules" id="p3">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
-
-<div class="color-div rules color-div-f0e68c">
-
-<p class="paragraph rules" id="p4">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
-
-<blockquote class="paragraph quote rules" id="b2">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
-
-<img src="hHZudkEQ-Zw.jpg" class="rules" id="img2">
-
-<div class="paragraph rules">
+<div class="paragraph">
 <ul class="list">
   <li>Первый пункт списка
     <ul class="list">
@@ -65,12 +61,10 @@
 </ul>
 </div>
 
-<div class="div-buttons rules">
+<div class="div-buttons">
 <a class="a-button-white">menu</a>
 <a class="a-button-white">menu</a>
 <a class="a-button-white">menu</a>
-</div>
-
 </div>
 
 </div>
