--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p class="separator"></p>
 
-<img src="nsV3JU6pyc0.jpg" class="photo">
+<img src="5955ad19c9962c4cb7b51deb06004993.gif" class="photo">
 </div>
 
 <blockquote class="quote">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
