--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <p class="separator"></p>
 
-<h2 class="subtitle">Фото / Друзья / Блоги</h2>
-<h2 class="subtitle">Видео / Клипы / Гифы</h2>
+<h2 class="subtitle position-center">Фото / Друзья / Блоги</h2>
+<h2 class="subtitle position-center">Видео / Клипы / Гифы</h2>
 
 <p class="separator"></p>
 
