--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
 <div class="color-div color-div-f1f1f1 miniblock">
 
+<h1 class="heading">&#9974; minu menu</h1>
+
+<p class="separator"></p>
+
 <h2 class="subtitle"><span class="pspan">&#10148;</span> Информация</h2>
 <h2 class="subtitle"><span class="pspan">&#10148;</span> Скиллы</h2>
 <h2 class="subtitle"><span class="pspan">&#10148;</span> Социальные сети</h2>
