--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="color-div color-div-f1f1f1 miniblock">
 
-<h1 class="heading"><span class="pspan">&#9974;</span> minu menu</h1>
+<h1 class="heading"><span class="image-background"></span> minu menu</h1>
 
 <p class="separator"></p>
 
