--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 <p class="separator"></p>
 
-<h2 class="subtitle"><span class="pspan">&#10148;</span> Информация</h2>
-<h2 class="subtitle"><span class="pspan">&#10148;</span> Скиллы</h2>
-<h2 class="subtitle"><span class="pspan">&#10148;</span> Социальные сети</h2>
-<h2 class="subtitle"><span class="pspan">&#10148;</span> Мои фотогрфии</h2>
+<h2 class="subtitle"><span class="image-background-2"></span> Информация</h2>
+<h2 class="subtitle"><span class="image-background-2"></span> Скиллы</h2>
+<h2 class="subtitle"><span class="image-background-2"></span> Социальные сети</h2>
+<h2 class="subtitle"><span class="image-background-2"></span> Мои фотогрфии</h2>
 
 <p class="separator"></p>
 
