--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <p class="separator"></p>
 
-<h2 class="subtitle position-center">Фото <span class="pspan">/</span> Друзья <span class="pspan">/</span> Блоги</h2>
-<h2 class="subtitle position-center">Видео <span class="pspan">/</span> Клипы <span class="pspan">/</span> Гифы</h2>
+<h2 class="subtitle position-center">Фото / Друзья / Блоги</h2>
+<h2 class="subtitle position-center">Видео / Клипы / Гифы</h2>
 
 <p class="separator"></p>
 
