--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
 
 <p class="separator"></p>
 
-<h2 class="subtitle position-center">Фото / Друзья / Блоги</h2>
-<h2 class="subtitle position-center">Видео / Клипы / Гифы</h2>
+<h2 class="subtitle position-center">
+<span class="pspan-2">Фото</span>
+<span class="pspan-2">Друзья</span>
+<span class="pspan-2">Блоги</span>
+</h2>
+<h2 class="subtitle position-center">
+<span class="pspan-2">Видео</span>
+<span class="pspan-2">Клипы</span>
+<span class="pspan-2">Гифы</span>
+</h2>
 
 <p class="separator"></p>
 
