--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 </div>
 
-<div class="color-div color-div-f1f1f1 miniblock">
+<div class="color-div-f1f1f1 miniblock">
 
 <h1 class="heading"><span class="image-background"></span> minu menu</h1>
 
@@ -31,16 +31,22 @@
 
 <p class="separator"></p>
 
-<h2 class="subtitle position-center">
-<span class="pspan-2">Фото</span>
-<span class="pspan-2">Друзья</span>
-<span class="pspan-2">Блоги</span>
-</h2>
-<h2 class="subtitle position-center">
-<span class="pspan-2">Видео</span>
-<span class="pspan-2">Клипы</span>
-<span class="pspan-2">Гифы</span>
-</h2>
+<div class="block-button">
+
+<div class="button-item">
+<h2 class="subtitle"><span class="image-background-2"></span> Фото</h2>
+<h2 class="subtitle"><span class="image-background-2"></span> Друзья</h2>
+<h2 class="subtitle"><span class="image-background-2"></span> Блоги</h2>
+</div>
+
+<div class="button-item">
+<h2 class="subtitle"><span class="image-background-2"></span> Видео</h2>
+<h2 class="subtitle"><span class="image-background-2"></span> Клипы</h2>
+<h2 class="subtitle"><span class="image-background-2"></span> Гифы</h2>
+<img src="5955ad19c9962c4cb7b51deb06004993.gif" class="photo">
+</div>
+
+</div>
 
 <p class="separator"></p>
 
